# presskit-mcp

./: .gitignore  Pipfile  README.md  ROADMAP.md  cli.py  config.yaml  pyproject.toml  server.py
medium/: __init__.py  client.py  tools.py
substack/: __init__.py  client.py  tools.py
tests/: test_static.py
